...
        control.addTarget(self, action: #selector(handleRefresh), for: .valueChanged)
        return control
    }()
    
    private lazy var fabButton: UIButton = {
        let button = UIButton(type: .system)
        button.accessibilityIdentifier = "CreateMessageButton"
        button.setImage(UIImage(systemName: "pencil"), for: .normal)
        button.tintColor = .white
        button.backgroundColor = .systemBlue
        button.layer.cornerRadius = 28
        button.layer.shadowColor = UIColor.black.cgColor
        button.layer.shadowOffset = CGSize(width: 0, height: 2)
...
    
    // MARK: - Lifecycle
    
    override func setupUI() {
        super.setupUI()
        
        title = "Messages"
        view.backgroundColor = .systemBackground
        
        // Setup table view
        view.addSubview(tableView)
        tableView.refreshControl = refreshControl
        tableView.snp.makeConstraints { make in
...
